# kaiaai

./: ISSUE_TEMPLATE.md  README.md  kaia.repos  kaia_ci.repos  test.py
kaia/: CMakeLists.txt  package.xml
kaia_bots/: CMakeLists.txt  package.xml
kaia_bringup/: CMakeLists.txt  README.md  package.xml
kaia_bringup/launch/: .main.launch.py.swp  .rviz2.launch.py.swp  .teleop_keyboard.launch.py.swp  .tmp.py.swp  cartographer.launch.py  edit_urdf.launch.py  inspect_urdf.launch.py  kaia_state_publisher.launch.py  main.launch.py  nav2.launch.py  navigation.launch.py  navigation.launch.py.save  occupancy_grid.launch.py  publish_urdf.launch.py  robot.launch.py  rviz2.launch.py  teleop_keyboard.launch.py  tmp.py  urdf.rviz2.launch.py
kaia_bringup/param/: burger.yaml  waffle.yaml
kaia_bringup/script/: .clone_robot_description.sh.swp  create_udev_rules  upload_robot_description_github.sh  watch_urdf.sh
kaia_cartographer/: CMakeLists.txt  package.xml
kaia_cartographer/launch/: cartographer.launch.py
kaia_desc/: CMakeLists.txt  package.xml
kaia_desc/urdf/: kaia_snoopy.urdf  kaia_waffle.urdf  kaia_waffle_pi.urdf
kaia_description/: CMakeLists.txt  package.xml
kaia_description/urdf/: goofy.urdf  kaia_snoopy.urdf  kaia_waffle_pi.urdf  loki.urdf  snoopy.urdf
kaia_launch/: CMakeLists.txt  README.md  package.xml
kaia_launch/launch/: launch.py
kaia_msgs/: CMakeLists.txt  README.md  package.xml
kaia_msgs/msg/: KaiaTelemetry.msg
kaia_nav2/: CMakeLists.txt  package.xml
kaia_nav2/launch/: nav2.launch.py
kaia_nav2/param/: waffle.yaml  waffle_pi.yaml
kaia_navigation/: CMakeLists.txt  package.xml
kaia_navigation/launch/: nav2.launch.py
kaia_navigation/param/: goofy.yaml  loki.yaml  snoopy.yaml
kaia_telem/: CMakeLists.txt  README.md  package.xml
kaia_telem/src/: telem.cpp
kaia_telemetry/: CMakeLists.txt  README.md  package.xml
kaia_telemetry/src/: .telem.cpp.swp  telem.cpp  telem_test_pub.cpp
kaia_teleop/: README.md  package.xml  setup.cfg  setup.py
kaia_teleop/kaia_teleop/: .teleop_keyboard.py.swp  old.py  teleop_keyboard.py
kaia_teleop/kaia_teleop/script/: teleop_keyboard.py
kaiaai/: CMakeLists.txt  package.xml
kaiaai_bringup/: CMakeLists.txt  README.md  package.xml
kaiaai_bringup/launch/: cartographer.launch.py  edit_urdf.launch.py  explore.launch.py  inspect_urdf.launch.py  main.launch.py  monitor_robot.launch.py  navigation.launch.py  physical.launch.py  publish_urdf.launch.py  rviz2.launch.py
kaiaai_bringup/nav2_bringup_humble/: local_setup.sh
kaiaai_bringup/nav2_bringup_humble/cmake/: nav2_bringupConfig-version.cmake  nav2_bringupConfig.cmake
kaiaai_bringup/nav2_bringup_iron/: local_setup.sh
kaiaai_bringup/nav2_bringup_iron/cmake/: nav2_bringupConfig-version.cmake  nav2_bringupConfig.cmake
kaiaai_bringup/script/: upload_robot_description_github.sh  watch_urdf.sh
kaiaai_bringup/tb3_nav2_humble/: local_setup.dsv  local_setup.sh  package.dsv
kaiaai_bringup/tb3_nav2_humble/cmake/: turtlebot3_navigation2Config-version.cmake  turtlebot3_navigation2Config.cmake
kaiaai_telemetry/: CMakeLists.txt  README.md  package.xml
kaiaai_telemetry/config/: telem.yaml
kaiaai_telemetry/src/: lds.h  lds_camsense_x1.h  lds_delta_2a.h  lds_delta_2b.h  lds_delta_2g.h  lds_ldlidar_ld14p.h  lds_ldrobot_ld14p.h  lds_lds02rr.h  lds_neato_xv11.h  lds_rplidar_a1.h  lds_ydlidar_x2.h  lds_ydlidar_x2_x2l.h  lds_ydlidar_x2l.h  lds_ydlidar_x3.h  lds_ydlidar_x3_pro.h  lds_ydlidar_x4.h  telem.cpp  telem_test_pub.cpp
kaiaai_teleop/: README.md  package.xml  setup.cfg  setup.py
kaiaai_teleop/kaiaai_teleop/: teleop_keyboard.py
