<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaiaai</name>
  <version>0.0.0</version>
  <description>ROS2 packages for Kaia.ai software platform compatible robots</description>
  <maintainer email="iliao@remake.ai">Ilia O.</maintainer> 
  <license>Apache 2.0</license>
  <url type="website">https://kaia.ai</url>
  <url type="repository">https://github.com/kaiaai/kaiaai</url>
  <url type="bugtracker">https://github.com/kaiaai/kaiaai/issues</url>
  <author email="iliao@remake.ai">Ilia O.</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kaiaai_bringup</exec_depend>
  <exec_depend>makerspet_snoopy</exec_depend>
  <exec_depend>makerspet_loki</exec_depend>
  <exec_depend>kaiaai_navigation</exec_depend>
  <exec_depend>kaiaai_teleop</exec_depend>
  <exec_depend>kaiaai_telemetry</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
