<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaiaai_bringup</name>
  <version>0.0.0</version>
  <description>ROS2 scripts to start Kaia.ai software platform compatible robots</description>

  <maintainer email="iliao@kaia.ai">Ilia O.</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://kaia.ai</url>
  <url type="repository">https://github.com/kaiaai/kaiaai</url>
  <url type="bugtracker">https://github.com/kaiaai/kaiaai/issues</url>
  <author email="iliao@kaia.ai">Ilia O.</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>makerspet_snoopy</exec_depend>
  <exec_depend>makerspet_loki</exec_depend>
  <exec_depend>kaiaai_node</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>kaiaai_telemetry</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
