<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaiaai_telemetry</name>
  <version>0.0.0</version>
  <description>Micro-ROS telemetry for Kaia.ai software platform compatible robots</description>
  <maintainer email="iliao@kaia.ai">Ilia O.</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://kaia.ai</url>
  <url type="repository">https://github.com/kaiaai/kaiaai</url>
  <url type="bugtracker">https://github.com/kaiaai/kaiaai/issues</url>
  <author email="iliao@kaia.ai">Ilia O.</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>kaiaai_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
