<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaiaai_teleop</name>
  <version>0.0.0</version>
  <description>Control Kaia.ai-compatible robots using a keyboard</description>
  <maintainer email="iliao@kaia.ai">Ilia O.</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://kaia.ai</url>
  <url type="repository">https://github.com/kaiaai/kaiaai</url>
  <url type="bugtracker">https://github.com/kaiaai/kaiaai/issues</url>
  <author email="iliao@kaia.ai">Ilia O.</author>

  <depend>rclpy</depend>

  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
